# dioxus_ia

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json
.github/workflows/: site.yaml  windows.yaml
assets/: icon.icns  main.css  tailwind.css
docs/: index.html
docs/assets/: IBMPlexMono-f1fd5a5197ba3425.woff2.br  imager-1d1d3425c7007229.js  imager-1d1d3425c7007229.js.br  imager-998287eab4b19ae9.js  imager-998287eab4b19ae9.js.br  imager_bg-394036649a24efec.wasm.br  imager_bg-4e44123b6db868ae.wasm.br  tailwind-5e9f784aeafb4d59.css.br
src/: main.rs
src/components/: dir_button.rs  drag_drop.rs  error.rs  format_selector.rs  mod.rs
src/config/: mod.rs
src/converter/: convert_image.rs  mod.rs
