[package]
name = "imager"
version = "0.1.0"
authors = ["Surasia"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.25.6", features = ["default-formats"] }
anyhow = "1.0.98"
dioxus = { version = "0.6.3", features = ["desktop", "file_engine"] }
dioxus-logger = "0.6.2"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.21"
rfd = "0.15.3"
cross-xdg = "1.0.0"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
